--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -2,7 +2,7 @@
   "New API key": "Nový API klíč",
   "Delete": "Odstranit",
   "Revoke": "Zrušit",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "Zrušit API klíč",
   "Revoke token": "Odvolat tokeny",
   "Open collection": "Otevřít sbírku",
   "New collection": "Nová sbírka",
@@ -14,8 +14,8 @@
   "Share this collection": "Sdílet tuto kolekci",
   "Import document": "Importovat dokument",
   "Sort in sidebar": "Seřadit v postranním panelu",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
+  "A-Z sort": "Seřadit A-Z",
+  "Z-A sort": "Seřadit Z-A",
   "Manual sort": "Manuální řazení",
   "Search in collection": "Hledat ve sbírce",
   "Star": "Přidat mezi oblíbené",
@@ -45,8 +45,8 @@
   "Copy ID": "Kopírovat ID",
   "Clear IndexedDB cache": "Smazat mezipaměť IndexedDB",
   "IndexedDB cache cleared": "Mezipaměť indexedDB vymazána",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "Vymazat místní úložiště",
+  "Local storage cleared": "Místní úložiště vyčištěno",
   "Toggle debug logging": "Toggle debug logging",
   "Debug logging enabled": "Zaznamenávání logů povoleno",
   "Debug logging disabled": "Zaznamenávání logů zakázáno",
@@ -60,7 +60,7 @@
   "Publish document": "Zveřejnit dokument",
   "Unpublish": "Zrušit zveřejnění",
   "Unpublished {{ documentName }}": "Nepublikováno {{ documentName }}",
-  "Subscription inherited from collection": "Subscription inherited from collection",
+  "Subscription inherited from collection": "Přístup zděděný z kolekce",
   "Share this document": "Sdílet tento dokument",
   "HTML": "HTML",
   "PDF": "PDF",
@@ -70,8 +70,8 @@
   "Download document": "Stáhnout dokument",
   "Copy as Markdown": "Kopírovat jako Markdown",
   "Markdown copied to clipboard": "Markdown zkopírován do schránky",
-  "Copy as text": "Copy as text",
-  "Text copied to clipboard": "Text copied to clipboard",
+  "Copy as text": "Kopírovat jako text",
+  "Text copied to clipboard": "Text byl zkopírován do schránky",
   "Copy public link": "Zkopírovat veřejný odkaz",
   "Link copied to clipboard": "Odkaz zkopírován do schránky",
   "Copy link": "Kopírovat odkaz",
@@ -99,7 +99,7 @@
   "Are you sure you want to archive this document?": "Opravdu chcete archivovat tento dokument?",
   "Document archived": "Dokument archivován",
   "Archiving this document will remove it from the collection and search results.": "Archivací tento dokument odstraníte z kolekce a výsledků vyhledávání.",
-  "{{ documentName }} restored": "{{ documentName }} restored",
+  "{{ documentName }} restored": "{{ documentName }} byl obnoven",
   "Choose a collection": "Vybrat sbírku",
   "Delete {{ documentName }}": "Odstranit {{ documentName }}",
   "Permanently delete": "Trvale odstranit",
@@ -112,11 +112,11 @@
   "Leave document": "Opustit dokument",
   "You have left the shared document": "Opustil jste sdílený dokument",
   "Could not leave document": "Nepodařilo se opustit dokument",
-  "Apply template": "Apply template",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "Apply template": "Použít šablonu",
+  "New emoji": "Nové emoji",
+  "Upload emoji": "Nahrát emoji",
   "Disconnect": "Odpojit",
-  "Disconnect analytics": "Disconnect analytics",
+  "Disconnect analytics": "Odpojit analytiku",
   "Home": "Domovská stránka",
   "Drafts": "Koncepty",
   "Search": "Hledat",
@@ -138,9 +138,9 @@
   "Log out": "Odhlásit se",
   "Mark notifications as read": "Označit upozornění jako přečtená",
   "Archive all notifications": "Archivovat všechny notifikace",
-  "New App": "New App",
-  "New Application": "New Application",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "New App": "Nová aplikace",
+  "New Application": "Nová žádost",
+  "This version of the document was deleted": "Tato verze dokumentu byla smazána",
   "Link copied": "Odkaz zkopírován",
   "Dark": "Temný",
   "Light": "Světlý",
@@ -149,7 +149,7 @@
   "Change theme": "Změnit motiv",
   "Change theme to": "Změnit motiv na",
   "Share link copied": "Odkaz pro sdílení zkopírován",
-  "Go to collection": "Go to collection",
+  "Go to collection": "Přejít ke sbírce",
   "Go to document": "Přejít do dokumentu",
   "Revoke link": "Zrušit odkaz",
   "Share link revoked": "Odkaz na sdílení zrušen",
@@ -183,7 +183,7 @@
   "currently viewing": "právě prohlíží",
   "previously edited": "dříve upraveno",
   "You": "Vy",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Avatar {{ name }}",
   "Viewers": "Prohlížející",
   "Collections are used to group documents and choose permissions": "Kolekce se používají pro seskupení dokumentů a volbu spojených oprávnění",
   "Name": "Jméno",
@@ -191,7 +191,7 @@
   "Public document sharing": "Veřejné sdílení dokumentů",
   "Allow documents within this collection to be shared publicly on the internet.": "Je-li povoleno, jakékoli dokumenty v této sbírce lze sdílet veřejně na internetu.",
   "Commenting": "Komentování",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Allow commenting on documents within this collection.": "Povolit komentování dokumentů v rámci této sbírky.",
   "Saving": "Uložení",
   "Save": "Uložit",
   "Creating": "Vytváření",
@@ -256,29 +256,29 @@
   "Currently editing": "Právě upravuje",
   "Currently viewing": "Právě prohlíží",
   "Viewed {{ timeAgo }}": "Zobrazeno před {{ timeAgo }}",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
-  "Please enter a name for the emoji": "Please enter a name for the emoji",
-  "Please select an image file": "Please select an image file",
-  "Emoji created successfully": "Emoji created successfully",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Tento typ souboru není podporován. Použijte prosím PNG, JPG, GIF nebo WebP.",
+  "File size too large. Maximum size is {{ size }}.": "Velikost souboru je příliš velká. Maximální velikost je {{ size }}.",
+  "Please enter a name for the emoji": "Zadejte název pro emoji",
+  "Please select an image file": "Vyberte prosím obrázek",
+  "Emoji created successfully": "Emoji byl úspěšně vytvořen",
   "Uploading": "Nahrávání",
-  "Add emoji": "Add emoji",
-  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
-  "Click or drag to replace": "Click or drag to replace",
-  "Drop the image here": "Drop the image here",
-  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
-  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
-  "This emoji will be available as": "This emoji will be available as",
+  "Add emoji": "Přidat emoji",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "Název emoji by měl být jedinečný a obsahovat pouze malá písmena, čísla a podtržítka.",
+  "name can only contain lowercase letters, numbers, and underscores.": "název může obsahovat pouze malá písmena, číslice a podtržítka.",
+  "Click or drag to replace": "Kliknutím nebo přetažením nahradíte",
+  "Drop the image here": "Sem přetáhněte obrázek",
+  "Click, drop, or paste an image here": "Klikněte, pošlete nebo vložte obrázek sem",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF nebo WebP až do {{ size }}",
+  "This emoji will be available as": "Toto emoji bude k dispozici jako",
   "Module failed to load": "Modul se nepodařilo načíst",
   "Loading Failed": "Načítání selhalo",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Litujeme, část aplikace se nepodařilo načíst. Může to být způsobeno tím, že byla aktualizována od chvíle, kdy jste kartu otevřeli, nebo kvůli neúspěšnému síťovému požadavku. Zkuste znovu načíst.",
   "Reload": "Znovu načíst",
   "Something Unexpected Happened": "Stalo se něco nečekaného",
-  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "Několikrát došlo k chybě. Pokud bude pokračovat, zkuste vymazat mezipaměť nebo použijte jiný prohlížeč.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Omlouváme se, došlo k neopravitelné chybě{{notified}}. Zkuste prosím stránku znovu načíst, může to být dočasná závada.",
   "our engineers have been notified": "naši technici byli upozorněni",
-  "Clear cache + reload": "Clear cache + reload",
+  "Clear cache + reload": "Vymazat mezipaměť + znovu načíst",
   "Show detail": "Zobrazit podrobnosti",
   "{{userName}} archived": "{{userName}} archivoval",
   "{{userName}} restored": "{{userName}} obnovil",
@@ -299,14 +299,14 @@
   "You will receive an email when it's complete.": "Po dokončení obdržíte e-mail.",
   "Include attachments": "Zahrnout přílohy",
   "Including uploaded images and files in the exported data": "Zahrnout nahrané obrázky a soubory do exportovaných dat",
-  "Include private collections": "Include private collections",
-  "{{count}} more user": "{{count}} more user",
-  "{{count}} more user_plural": "{{count}} more users",
-  "Filter options": "Filter options",
+  "Include private collections": "Zahrnout soukromé sbírky",
+  "{{count}} more user": "{{count}} uživatel navíc",
+  "{{count}} more user_plural": "{{count}} uživatelů navíc",
+  "Filter options": "Volby filtru",
   "Filter": "Filtr",
   "No results": "Žádné výsledky",
-  "{{ count }} members": "{{ count }} member",
-  "{{ count }} members_plural": "{{ count }} members",
+  "{{ count }} members": "{{ count }} člen",
+  "{{ count }} members_plural": "{{ count }} členů",
   "{{authorName}} created <3></3>": "{{authorName}} vytvořil <3></3>",
   "{{authorName}} opened <3></3>": "{{authorName}} otevřel <3></3>",
   "Search emoji": "Hledat emoji",
@@ -316,7 +316,7 @@
   "Icon Picker": "Výběr ikony",
   "Icons": "Ikony",
   "Emojis": "Emoji",
-  "Custom Emojis": "Custom Emojis",
+  "Custom Emojis": "Vlastní emoji",
   "Custom": "Vlastní",
   "Remove": "Odstranit",
   "All": "Vše",
@@ -336,16 +336,16 @@
   "Permission": "Oprávnění",
   "Change Language": "Změnit jazyk",
   "Dismiss": "Zavřít",
-  "Unable to download image": "Unable to download image",
-  "Lightbox": "Lightbox",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
-  "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
-  "Edit diagram": "Edit diagram",
+  "Unable to download image": "Nepodařilo se stáhnout obrázek",
+  "Lightbox": "LightBox",
+  "View, navigate, or download images in the document": "Zobrazit, navigovat nebo stáhnout obrázky v dokumentu",
+  "Zoom in": "Přiblížit",
+  "Zoom out": "Oddálit",
+  "Edit diagram": "Upravit diagram",
   "Close": "Zavřít",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Předchozí",
+  "Next": "Následující",
+  "Image failed to load": "Obrázek se nepodařilo načíst",
   "You’re offline.": "Jste offline.",
   "Sorry, an error occurred.": "Je nám líto, došlo k chybě.",
   "Click to retry": "Kliknutím zkuste znovu",
