fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -574,12 +574,12 @@
   "Sort ascending": "Seřadit vzestupně",
   "Sort descending": "Seřadit sestupně",
   "Table": "Tabulka",
-  "Export as CSV": "Export as CSV",
-  "Toggle header": "Toggle header",
+  "Export as CSV": "Export do CSV",
+  "Toggle header": "Přepnout záhlaví",
   "Math inline (LaTeX)": "Matematický vzorec (LaTeX)",
   "Math block (LaTeX)": "Matematický vzorec (LaTeX)",
-  "Merge cells": "Merge cells",
-  "Split cell": "Split cell",
+  "Merge cells": "Sloučit buňky",
+  "Split cell": "Rozdělit buňku",
   "Tip": "Tip",
   "Tip notice": "Tip",
   "Warning": "Varování",
@@ -592,44 +592,44 @@
   "Indent": "Odsazení",
   "Outdent": "Předsazení",
   "Video": "Video",
-  "None": "None",
-  "Delete embed": "Delete embed",
-  "Upload an image": "Upload an image",
+  "None": "Žádný",
+  "Delete embed": "Odstranit vložené",
+  "Upload an image": "Nahrát obrázek",
   "Could not import file": "Soubor nelze importovat",
   "Unsubscribed from document": "Upozornění vypnuta",
-  "Unsubscribed from collection": "Unsubscribed from collection",
+  "Unsubscribed from collection": "Odhlásit ze sbírky",
   "Account": "Účet",
-  "API & Apps": "API & Apps",
+  "API & Apps": "API & Aplikace",
   "Details": "Podrobnosti",
   "Security": "Zabezpečení",
   "Features": "Funkce",
   "Members": "Uživatelé",
-  "API Keys": "API Keys",
-  "Applications": "Applications",
+  "API Keys": "API klíče",
+  "Applications": "Žádosti",
   "Shared Links": "Sdílené odkazy",
   "Import": "Import",
-  "Install": "Install",
+  "Install": "Instalovat",
   "Integrations": "Integrace",
-  "API key": "API key",
+  "API key": "API klíč",
   "Show path to document": "Zobrazit cestu k dokumentu",
   "Collection menu": "Nabídka sbírek",
   "Comment options": "Nastavení komentářů",
   "Enable viewer insights": "Zapnout analytika nahlížení",
   "Enable embeds": "Povolit embed vkládání",
-  "Delete Emoji": "Delete Emoji",
-  "Emoji deleted": "Emoji deleted",
-  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
-  "File": "File",
+  "Delete Emoji": "Smazat emoji",
+  "Emoji deleted": "Emoji smazáno",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Jste si jisti, že chcete odstranit emoji <em>{{emojiName}}</em>? Již ho nebudete moci používat ve svých dokumentech nebo sbírkách.",
+  "File": "Soubor",
   "Group members": "Členové skupiny",
   "Edit group": "Upravit skupinu",
   "Delete group": "Odstranit skupinu",
   "Group options": "Nastavení skupin",
   "Cancel": "Zrušit",
-  "Import menu options": "Import menu options",
+  "Import menu options": "Importovat možnosti nabídky",
   "New document in <em>{{ collectionName }}</em>": "Nový dokument v <em>{{ collectionName }}</em>",
   "New child document": "Nový vložený dokument",
-  "Save in workspace": "Save in workspace",
-  "Revoke {{ appName }}": "Revoke {{ appName }}",
+  "Save in workspace": "Uložit do pracovního prostoru",
+  "Revoke {{ appName }}": "Odebrat {{ appName }}",
   "Revoking": "Odvolávání",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
