rework bulk selection functionality

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -96,31 +96,14 @@
   "Move": "Move",
   "Move to collection": "Move to collection",
   "Move {{ documentType }}": "Move {{ documentType }}",
-  "Move selected": "Move selected",
-  "Archive selected": "Archive selected",
-  "Are you sure you want to archive these documents?": "Are you sure you want to archive these documents?",
   "Are you sure you want to archive this document?": "Are you sure you want to archive this document?",
-  "{{count}} documents archived": "{{count}} documents archived",
-  "{{count}} documents archived_plural": "{{count}} documents archived",
   "Document archived": "Document archived",
-  "Archiving these documents will remove them from the collection and search results.": "Archiving these documents will remove them from the collection and search results.",
   "Archiving this document will remove it from the collection and search results.": "Archiving this document will remove it from the collection and search results.",
-  "Restore selected": "Restore selected",
-  "{{count}} documents restored": "{{count}} documents restored",
-  "{{count}} documents restored_plural": "{{count}} documents restored",
   "{{ documentName }} restored": "{{ documentName }} restored",
-  "Couldn't restore the documents, try again?": "Couldn't restore the documents, try again?",
-  "Couldn't restore the document, try again?": "Couldn't restore the document, try again?",
   "Choose a collection": "Choose a collection",
-  "Delete selected": "Delete selected",
   "Delete {{ documentName }}": "Delete {{ documentName }}",
-  "Delete {{count}} documents": "Delete {{count}} documents",
-  "Delete {{count}} documents_plural": "Delete {{count}} documents",
-  "Permanently delete selected": "Permanently delete selected",
   "Permanently delete": "Permanently delete",
   "Permanently delete {{ documentName }}": "Permanently delete {{ documentName }}",
-  "Permanently delete {{count}} documents": "Permanently delete {{count}} documents",
-  "Permanently delete {{count}} documents_plural": "Permanently delete {{count}} documents",
   "Empty trash": "Empty trash",
   "Permanently delete documents in trash": "Permanently delete documents in trash",
   "Comments": "Comments",
@@ -200,6 +183,37 @@
   "currently viewing": "currently viewing",
   "previously edited": "previously edited",
   "You": "You",
+  "{{ count }} documents archived": "{{ count }} documents archived",
+  "{{ count }} documents archived_plural": "{{ count }} documents archived",
+  "{{ successCount }} archived, {{ errorCount }} failed": "{{ successCount }} archived, {{ errorCount }} failed",
+  "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.": "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.",
+  "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results._plural": "Are you sure you want to archive <em>{{ count }} documents</em>? They will be removed from collections and search results.",
+  "{{ count }} documents deleted": "{{ count }} documents deleted",
+  "{{ count }} documents deleted_plural": "{{ count }} documents deleted",
+  "{{ successCount }} deleted, {{ errorCount }} failed": "{{ successCount }} deleted, {{ errorCount }} failed",
+  "Are you sure you want to delete <em>{{ count }} documents</em>? This action will move them to the trash.": "Are you sure you want to delete <em>{{ count }} documents</em>? This action will move them to the trash.",
+  "Are you sure you want to delete <em>{{ count }} documents</em>? This action will move them to the trash._plural": "Are you sure you want to delete <em>{{ count }} documents</em>? This action will move them to the trash.",
+  "Deleting": "Deleting",
+  "I'm sure – Delete": "I'm sure – Delete",
+  "Select a location to move": "Select a location to move",
+  "{{ count }} documents moved": "{{ count }} documents moved",
+  "{{ count }} documents moved_plural": "{{ count }} documents moved",
+  "{{ successCount }} moved, {{ errorCount }} failed": "{{ successCount }} moved, {{ errorCount }} failed",
+  "Couldn't move the documents, try again?": "Couldn't move the documents, try again?",
+  "Move {{ count }} documents to <em>{{ location }}</em>": "Move {{ count }} documents to <em>{{ location }}</em>",
+  "Untitled": "Untitled",
+  "Select a location to move {{ count }} documents": "Select a location to move {{ count }} documents",
+  "Select a location to move {{ count }} documents_plural": "Select a location to move {{ count }} documents",
+  "Moving": "Moving",
+  "Archive {{ count }} documents": "Archive {{ count }} documents",
+  "Archive {{ count }} documents_plural": "Archive {{ count }} documents",
+  "Delete {{ count }} documents": "Delete {{ count }} documents",
+  "Delete {{ count }} documents_plural": "Delete {{ count }} documents",
+  "Move {{ count }} documents": "Move {{ count }} documents",
+  "Move {{ count }} documents_plural": "Move {{ count }} documents",
+  "{{ count }} selected": "{{ count }} selected",
+  "{{ count }} selected_plural": "{{ count }} selected",
+  "Clear selection": "Clear selection",
   "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Viewers",
   "Collections are used to group documents and choose permissions": "Collections are used to group documents and choose permissions",
@@ -215,7 +229,6 @@
   "Create": "Create",
   "Collection deleted": "Collection deleted",
   "I’m sure – Delete": "I’m sure – Delete",
-  "Deleting": "Deleting",
   "Are you sure about that? Deleting the <em>{{collectionName}}</em> collection is permanent and cannot be restored, however all published documents within will be moved to the trash.": "Are you sure about that? Deleting the <em>{{collectionName}}</em> collection is permanent and cannot be restored, however all published documents within will be moved to the trash.",
   "Also, <em>{{collectionName}}</em> is being used as the start view – deleting it will reset the start view to the Home page.": "Also, <em>{{collectionName}}</em> is being used as the start view – deleting it will reset the start view to the Home page.",
   "Type a command or search": "Type a command or search",
@@ -229,13 +242,11 @@
   "no access": "no access",
   "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection": "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection",
   "Move document": "Move document",
-  "Moving": "Moving",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
   "Collections could not be loaded, please reload the app": "Collections could not be loaded, please reload the app",
   "Start view": "Start view",
   "Install now": "Install now",
   "Deleted Collection": "Deleted Collection",
-  "Untitled": "Untitled",
   "Unpin": "Unpin",
   "Select a location to copy": "Select a location to copy",
   "Document copied": "Document copied",
@@ -469,6 +480,7 @@
   "Shared with me": "Shared with me",
   "Show more": "Show more",
   "Link options": "Link options",
+  "Select": "Select",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "Starred",
   "Up to date": "Up to date",
@@ -788,40 +800,16 @@
   "Observing {{ userName }}": "Observing {{ userName }}",
   "Backlinks": "Backlinks",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "Failed to load documents": "Failed to load documents",
-  "{{count}} documents deleted": "{{count}} documents deleted",
-  "{{count}} documents deleted_plural": "{{count}} documents deleted",
-  "Document deleted": "Document deleted",
-  "Couldn't delete the documents, try again?": "Couldn't delete the documents, try again?",
-  "Couldn't delete the document, try again?": "Couldn't delete the document, try again?",
-  "Couldn't archive the documents, try again?": "Couldn't archive the documents, try again?",
-  "Couldn't archive the document, try again?": "Couldn't archive the document, try again?",
-  "Loading documents...": "Loading documents...",
-  "Loading document...": "Loading document...",
-  "Unable to load documents": "Unable to load documents",
-  "Are you sure you want to delete these <em>{{count}} templates</em>?": "Are you sure you want to delete these <em>{{count}} templates</em>?",
-  "Are you sure about that? Deleting these <em>{{count}} documents</em>will delete all of their history and combined <em>{{nestedCount}} nested documents</em>.": "Are you sure about that? Deleting these <em>{{count}} documents</em>will delete all of their history and combined <em>{{nestedCount}} nested documents</em>.",
-  "Are you sure about that? Deleting these <em>{{count}} documents</em> will delete all of their history.": "Are you sure about that? Deleting these <em>{{count}} documents</em> will delete all of their history.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>.",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>._plural": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ nestedCount }} nested document</em>.",
-  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history.",
-  "If you'd like the option of referencing or restoring these documents in the future, consider archiving them instead.": "If you'd like the option of referencing or restoring these documents in the future, consider archiving them instead.",
-  "If you'd like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "If you'd like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.",
-  "I'm sure – Delete": "I'm sure – Delete",
-  "Select a location to move": "Select a location to move",
-  "Couldn't move the documents, try again?": "Couldn't move the documents, try again?",
-  "Couldn't move the document, try again?": "Couldn't move the document, try again?",
-  "You don't have permission to move these documents": "You don't have permission to move these documents",
-  "You don't have permission to move this document": "You don't have permission to move this document",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.",
+  "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>._plural": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.",
+  "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.": "If you’d like the option of referencing or restoring the {{noun}} in the future, consider archiving it instead.",
   "Document moved": "Document moved",
-  "{{count}} documents moved": "{{count}} documents moved",
-  "{{count}} documents moved_plural": "{{count}} documents moved",
+  "Couldn’t move the document, try again?": "Couldn’t move the document, try again?",
+  "Move to <em>{{ location }}</em>": "Move to <em>{{ location }}</em>",
   "Couldn’t create the document, try again?": "Couldn’t create the document, try again?",
-  "{{count}} documents permanently deleted": "{{count}} documents permanently deleted",
-  "{{count}} documents permanently deleted_plural": "{{count}} documents permanently deleted",
   "Document permanently deleted": "Document permanently deleted",
-  "Are you sure you want to permanently delete these <em>{{count}} documents</em>? This action is immediate and cannot be undone.": "Are you sure you want to permanently delete these <em>{{count}} documents</em>? This action is immediate and cannot be undone.",
   "Are you sure you want to permanently delete the <em>{{ documentTitle }}</em> document? This action is immediate and cannot be undone.": "Are you sure you want to permanently delete the <em>{{ documentTitle }}</em> document? This action is immediate and cannot be undone.",
   "Select a location to publish": "Select a location to publish",
   "Document published": "Document published",
