fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Inconnu",
   "Mark all as read": "Tout marquer comme lu",
   "You're all caught up": "Vous êtes à jour",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icône",
   "OAuth client icon": "Icône du client OAuth",
   "My App": "Mon application",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotation du secret client invalidera le secret actuel. Assurez-vous de mettre à jour toutes les applications utilisant ces identifiants.",
   "Displayed to users when authorizing": "Affiché aux utilisateurs lors de l'autorisation",
   "Application icon": "Icône de l'application",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Informations du développeur affichées aux utilisateurs lors de l'autorisation",
   "Developer name": "Nom du développeur",
   "Developer URL": "URL de développement",
