fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Desconocido",
   "Mark all as read": "Marcar todas como leídas",
   "You're all caught up": "Estás al día",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ícono",
   "OAuth client icon": "OAuth client icon",
   "My App": "Mi aplicación",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotar el secreto del cliente invalidará el secreto actual. Asegúrate de actualizar cualquier aplicación que utilice estas credenciales.",
   "Displayed to users when authorizing": "Mostrado a los usuarios mientras se autorizan",
   "Application icon": "Application icon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Nombre del desarrollador",
   "Developer URL": "URL de desarollo",
