fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Unbekannt",
   "Mark all as read": "Alle als gelesen markieren",
   "You're all caught up": "Du bist auf dem neusten Stand",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Symbol",
   "OAuth client icon": "OAuth-Client-Symbol",
   "My App": "Meine Anwendung",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Das Rotieren des Client-Secrets macht das aktuelle Secret ungültig. Stellen Sie sicher, dass Sie alle Anwendungen, die diese Zugangsdaten verwenden, entsprechend aktualisieren.",
   "Displayed to users when authorizing": "Wird den Benutzern bei der Autorisierung angezeigt",
   "Application icon": "App-Symbol",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Entwicklerinformationen, die den Benutzern bei der Autorisierung angezeigt werden",
   "Developer name": "Entwicklername",
   "Developer URL": "Entwickler-URL",
