fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "알 수 없음",
   "Mark all as read": "모두 읽은 상태로 표시",
   "You're all caught up": "모두 확인함",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "아이콘",
   "OAuth client icon": "OAuth 클라이언트 아이콘",
   "My App": "내 앱",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "클라이언트 시크릿을 교체하면 현재 시크릿이 무효화됩니다. 이 자격 증명을 사용하는 모든 애플리케이션을 업데이트해야 합니다.",
   "Displayed to users when authorizing": "사용자가 권한을 부여할 때 표시됨",
   "Application icon": "애플리케이션 아이콘",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "사용자가 권한을 부여할 때 표시되는 개발자 정보",
   "Developer name": "개발자 이름",
   "Developer URL": "개발자 URL",
