fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Onbekend",
   "Mark all as read": "Markeer alles als gelezen",
   "You're all caught up": "Je bent helemaal bij",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Icon",
   "OAuth client icon": "OAuth cliënt icoon",
   "My App": "Mijn App",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Het opnieuw genereren van het clientgeheim zal het huidige geheim ongeldig maken. Zorg ervoor dat je alle applicaties met behulp van deze inloggegevens bijwerkt.",
   "Displayed to users when authorizing": "Weergegeven aan gebruikers bij autorisatie",
   "Application icon": "App-icoon",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Ontwikkelaarsinformatie die wordt getoond aan gebruikers bij autoriseren",
   "Developer name": "Ontwikkelaar naam",
   "Developer URL": "Ontwikkelaar URL",
