--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Nieznane",
   "Mark all as read": "Oznacz wszystkie jako przeczytane",
   "You're all caught up": "Jesteś na bieżąco",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ikona",
   "OAuth client icon": "Ikona klienta OAuth",
   "My App": "Moja aplikacja",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacja (zmiana) sekretu klienta spowoduje unieważnienie bieżącego sekretu. Upewnij się, że zaktualizujesz wszystkie aplikacje korzystające z tych danych uwierzytelniających.",
   "Displayed to users when authorizing": "Wyświetlane użytkownikom podczas autoryzacji",
   "Application icon": "Ikona aplikacji",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Informacje o deweloperze wyświetlane użytkownikom podczas autoryzacji",
   "Developer name": "Nazwa dewelopera",
   "Developer URL": "Adres URL dewelopera",
