fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Bilinmeyen",
   "Mark all as read": "Tümünü okundu olarak işaretle",
   "You're all caught up": "Tüm bildirimleri gördünüz",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Simge",
   "OAuth client icon": "OAuth istemci simgesi",
   "My App": "Uygulamam",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "İstemci gizlisini döndürmek, mevcut gizliyi geçersiz kılacaktır. Bu kimlik bilgilerini kullanan tüm uygulamaları güncellediğinizden emin olun.",
   "Displayed to users when authorizing": "Yetkilendirilirken kullanıcılara gösterilir",
   "Application icon": "Uygulama simgesi",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Yetkilendirilirken kullanıcılara gösterilen geliştirici bilgileri",
   "Developer name": "Geliştirici adı",
   "Developer URL": "Geliştirici URL'si",
