fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "未知",
   "Mark all as read": "全部标记为已读",
   "You're all caught up": "您已了解所有情况",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "图标",
   "OAuth client icon": "OAuth 客户端图标",
   "My App": "我的应用",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "轮换客户端密钥将会使之前的密钥不再有效。请确保更新使用这些密钥的应用程序。",
   "Displayed to users when authorizing": "在授权时显示给用户",
   "Application icon": "应用图标",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "在授权时显示给用户的开发者信息",
   "Developer name": "开发者名称",
   "Developer URL": "开发者 URL",
