fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "Desconhecido",
   "Mark all as read": "Marcar tudo como lido",
   "You're all caught up": "Você está em dia",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "Ícone",
   "OAuth client icon": "Ícone cliente OAuth",
   "My App": "Meu Aplicativo",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacionar o segredo do cliente invalidará o segredo atual. Certifique-se de atualizar todas as aplicações usando essas credenciais.",
   "Displayed to users when authorizing": "Visível aos usuários ao autorizar",
   "Application icon": "Ícone do aplicativo",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "Informações de desenvolvedor exibidas aos usuários ao autorizar",
   "Developer name": "Nome do desenvolvedor",
   "Developer URL": "URL do desenvolvedor",
