fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -353,6 +353,11 @@
   "Unknown": "ناشناخته",
   "Mark all as read": "علامت گذاری همه بعنوان خوانده شده",
   "You're all caught up": "شما همه  اعلان ها و پیام ها را دیده اید",
+  "Client type": "Client type",
+  "Confidential": "Confidential",
+  "Suitable for server-side applications": "Suitable for server-side applications",
+  "Public": "Public",
+  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
   "Icon": "آیکون",
   "OAuth client icon": "آیکون کلاینت OAuth",
   "My App": "اپلیکیشن من",
@@ -975,6 +980,7 @@
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "تولید کلید جدید برای کلاینت باعث باطل شدن کلید فعلی می‌شود. مطمئن شوید برنامه‌هایی که از این اطلاعات استفاده می‌کنند را به‌روزرسانی کرده‌اید.",
   "Displayed to users when authorizing": "هنگام مجوزدهی به کاربران نمایش داده می‌شود",
   "Application icon": "آیکون برنامه",
+  "Confidential clients can securely store a secret": "Confidential clients can securely store a secret",
   "Developer information shown to users when authorizing": "اطلاعات توسعه‌دهنده که هنگام مجوزدهی به کاربران نشان داده می‌شود",
   "Developer name": "نام توسعه‌دهنده",
   "Developer URL": "آدرس توسعه‌دهنده",
